<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150.0dip"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/txt_app_ver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:layout_width="150.0dip"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/txt_service_ver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16.0sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16.0sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16.0sp"
        android:text="@string/copyright"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="16.0sp"
        android:text="@string/companylink"
        android:layout_marginTop="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:textSize="16.0sp"
        android:text="@string/authoremail"
        android:layout_marginTop="8dp"/>
</LinearLayout>