<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apptoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.InnoAdminMode.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            app:logo="@mipmap/ic_launcher_round"
            app:popupTheme="@style/Theme.InnoAdminMode.PopupOverlay"
            app:title="@string/app_name"
            app:titleMarginStart="32dp"
            app:titleTextColor="@color/colorPrimary">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/dpc_tabs_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/apptoolbar"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="#FFF"
            app:tabIndicatorHeight="4dp"
            app:tabTextColor="@color/white"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/dpc_login_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/apptoolbar"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/dpc_detailed_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="3dp"
            android:text="@string/dpc_detailed_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/enter_adminmode"
            style="@style/ActButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:onClick="HandleEnterAdminMode"
            android:text="@string/enter_dpc"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</RelativeLayout>